--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --azul-principal: #004990;
+  --amarillo-principal: #ffcc00;
+}
 * {
   margin: 0;
   padding: 0;
