Feature: Add header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,26 @@
-<p>header works!</p>
+<header>
+  <div class="logos">
+    <img
+      src="../../../assets/logo-unison.png"
+      alt="Logotipo de la Universidad de Sonora"
+    />
+    <div id="yellow-line"></div>
+    <img
+      src="../../../assets/logo-isi.png"
+      alt="Logotipo de la carrera de Ingeniería en Sistemas de Información"
+    />
+  </div>
+  <!-- <app-nav-bar></app-nav-bar> -->
+  <div class="navbar-icon">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      x="0px"
+      y="0px"
+      width="100"
+      height="100"
+      viewBox="0 0 48 48"
+    >
+      <path d="M6 22H42V26H6zM6 10H42V14H6zM6 34H42V38H6z"></path>
+    </svg>
+  </div>
+</header>
