--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,1 +1,10 @@
-<p>nav-bar works!</p>
+<div>
+  <h2>Ingenería en Sistemas de Información</h2>
+  <ul>
+    <li><a href="" #item>Noticias</a></li>
+    <li><a href="" #item>Alumnos</a></li>
+    <li><a href="" #item>Maestros</a></li>
+    <li><a href="" #item>Plan de estudios</a></li>
+    <li><a href="" #item>Etc</a></li>
+  </ul>
+</div>
