--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,17 +10,17 @@
       alt="Logotipo de la carrera de Ingeniería en Sistemas de Información"
     />
   </div>
-  <!-- <app-nav-bar></app-nav-bar> -->
-  <div class="navbar-icon">
+  <div class="div-navbar">
     <svg
+      id="navbar-button"
+      #navbarButton
       xmlns="http://www.w3.org/2000/svg"
       x="0px"
       y="0px"
-      width="100"
-      height="100"
       viewBox="0 0 48 48"
     >
       <path d="M6 22H42V26H6zM6 10H42V14H6zM6 34H42V38H6z"></path>
     </svg>
+    <app-nav-bar id="navbar"></app-nav-bar>
   </div>
 </header>
