Fixed issues with the click outside of the navbar

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,6 +12,7 @@
   </div>
   <div class="div-navbar">
     <svg
+      (click)="onElementClick($event)"
       id="navbar-button"
       #navbarButton
       xmlns="http://www.w3.org/2000/svg"
