--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
+html {
   font-size: 16px;
+}
+body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
