feat: routing for pages

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,46 @@
-<p>footer works!</p>
+
+<footer id="footer">
+    <!--Columnas-->
+    <div class="row">
+        <!--Paginas relevantes-->
+        <div class="col-33">
+            <p class="footer-title">Páginas relevantes</p>
+            <hr class="blue-footer-strip">
+            <div class="footer-list">
+                <ul>
+                    <li><a href="https://www.unison.mx/">Universidad de Sonora</a></li>
+                    <li><a href="https://ingenierias.unison.mx/">División de Ingeniería</a></li>
+                    <li><a href="http://dii.isi.uson.mx/">Departamento de Ingeniería industrial</a></li>
+                </ul>
+            </div>
+        </div>
+        <!--General-->
+        <div class="col-33">
+            <p class="footer-title">General</p>
+            <hr class="blue-footer-strip">
+            <div class="footer-list">
+                <ul>
+                    <li>Aviso de privacidad</li>
+                    <li>© Universidad de Sonora 2023</li>
+                </ul>
+            </div>
+        </div>
+        <!--Contacto-->
+        <div class="col-33">
+            <p class="footer-title">Contacto</p>
+            <hr class="blue-footer-strip">
+            <div class="footer-list">
+                <ul>
+                    <li><a href="mailto:isi@unison.mx">isi@unison.mx</a></li>
+                    <li>312-95-42</li>
+                    <li>Dirección</li>
+                </ul>
+            </div>
+            <!--Redes Sociales-->
+            <div class="socials">
+                <a href="https://www.facebook.com/profile.php?id=100002092122881"><img class="fb-tw" src="https://cdn-icons-png.flaticon.com/512/1384/1384005.png" alt="aaaa"></a>
+                <a href="https://twitter.com/isiunison"><img class="fb-tw" src="https://cdn-icons-png.flaticon.com/512/733/733635.png" alt="sssss"></a>
+            </div>
+        </div>
+    </div>
+</footer>
