--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -5,6 +5,6 @@
     <li><a href="" #item>Alumnos</a></li>
     <li><a href="" #item>Maestros</a></li>
     <li><a href="" #item>Plan de estudios</a></li>
-    <li><a href="" #item>Etc</a></li>
+    <li><a routerLink="/galeria" #item>Etc</a></li>
   </ul>
 </div>
